--- a/Business_sprint2.ipynb
+++ b/Business_sprint2.ipynb
@@ -46,15 +46,15 @@
    "source": [
     "# Initialize a session using your AWS credentials\n",
     "session = boto3.Session(\n",
-    "    aws_access_key_id='AKIA3HGXOEDHWGC35BNM',\n",
-    "    aws_secret_access_key='sL9c2IjSe0L7Zo5m6P6zOocU2SAQGKJO33MMva6k',\n",
+    "    aws_access_key_id= aws_access_key_id,\n",
+    "    aws_secret_access_key= aws_secret_access_key,\n",
     "    region_name='us-west-1' # e.g., 'us-west-1'\n",
     ")\n",
     "\n",
     "# Create an S3 client\n",
     "s3 = session.client('s3')\n",
     "\n",
-    "bucket_name = 'msds-694-1'"
+    "bucket_name = bucket_name"
    ]
   },
   {
